--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pf4-hppaper-re</title>
+    <title>pf3-hppaper</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/common.css">
 
     <!-- //구글폰트 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nanum+Brush+Script&family=Noto+Sans+KR:wght@100;200;300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <!-- 구글폰트// -->
     <!-- 프리텐다드 -->
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
@@ -112,7 +112,7 @@
         <!-- promotion -->
         <section id="promotion" class="vh100">
             <div class="wrap flex column align-center center">
-                <h2 class="h2">PROMOTION VIDEO</h2>
+                <h2 class="h5">PROMOTION VIDEO</h2>
                 <p class="h3">HB PAPER 기업 소개 영상을 확인해보세요. </p>
                 <iframe width="1520" height="551" src="https://www.youtube.com/embed/9HyfO_V5cLw" title="자연으로 스마트하게, HB PAPER 기업 소개 영상" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
@@ -120,8 +120,8 @@
         <!-- business -->
         <section id="business" class="vh100">
             <div class="wrap flex column center">
-                <h2 class="h2">BUSINESS AREA</h2>
-                <p class="h3"><span class="text_under">PFAS Free, Repulpable, Compostable의 가치</span>는<span class="block"></span>
+                <h2 class="h5">BUSINESS AREA</h2>
+                <p class="h3">PFAS Free, Repulpable, Compostable의 가치는<span class="block"></span>
                     우리 HB PAPER가 나아가고자 하는 사업방향입니다. </p>
                 <ul class="flex between">
                     <li>
@@ -142,7 +142,7 @@
         <!-- products -->
         <section id="products" class="vh100">
             <div class="wrap flex column between">
-                <h2 class="h2">products</h2>
+                <h2 class="hide">products</h2>
                 <ul class="flex">
                     <li><a href="" class="block">종이 봉투</a></li>
                     <li><a href="" class="block">종이 쇼핑백</a></li>
@@ -154,15 +154,15 @@
                 <div>
                     <article>
                         <h3 class="h2">종이 봉투</h3>
+                        <figure>
+                            <img src="img/paper_01.jpg" alt="">
+                            <figcaption class="hide">종이봉투 적용사례</figcaption>
+                        </figure>
                         <p class="p">
                             각대봉투, 새철봉투, 창봉투 등 고객의 요구사항에 맞는<span class="block"></span>
                             다양한 종이봉투의 제작이 가능하며, 고품질의 크라프트 종이를<span class="block"></span>
                             사용하여 강도가 우수합니다.
                         </p>
-                        <figure>
-                            <img src="img/duct01.jpg" alt="">
-                            <figcaption class="hide">종이봉투 적용사례</figcaption>
-                        </figure>
                         <a href="" class="block">MORE VIEW</a>
                     </article>
                     <article>
@@ -226,11 +226,12 @@
         <!-- news -->
         <section id="news" class="vh100">
             <div class="wrap grid">
-                <h2 class="h2">NEWS & NOTICE</h2>
-                <h3 class="h2">HB PAPER의 새로운 순간들 </h3>
+                <h2 class="h5">NEWS & NOTICE</h2>
+                <h3 class="h2">HB PAPER의<span class="block"></span>
+                    새로운 순간들 </h3>
                 <p class="p">HB PAPER의 다양한 소식들을 확인해보세요.</p>
                 <ul class="grid">
-                    <!-- <li>
+                    <li>
                         <a href="" class="block p">
                             <span>보도자료</span>
                             에이치비페이퍼, 코엑스 푸드위크 2023서 종이 포장재 알려... “저농도 수용액에 해리되…
@@ -257,7 +258,7 @@
                             HB PAPER가 FOOD WEEK 2023(2023 서울국제식품산업전)에 참가합니다!
                             <time>2023-11-08</time>
                         </a>
-                    </li> -->
+                    </li>
                     <li>
                         <a href="" class="block p">
                             <figure>
@@ -296,7 +297,7 @@
                     <li>
                         <a href="" class="block p">
                             <figure>
-                                <img src="img/news04.jpg" alt="">
+                                <img src="img/news_04.jpg" alt="">
                                 <figcaption>
                                     <span>공지사항</span>
                                     안녕하세요, HB PAPER입니다. HB G...
